svc_deploy_green.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-green
  namespace: default
spec:
  selector:
    app: green
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: ekdms3868/popol:green
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
