svc_deploy_main.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  namespace: default
spec:
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: ekdms3868/popol:Jenkins
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
