testpod.yml
#testpod.yml
#Deployment 작성하기
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 2  # 복제본 2개
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: web
        image: ekdms3868/popol:main
        #하버 구축 완료하면 이미지 가져오는걸 밑처럼 바꾸어주기
        #image: 211.183.3.105/subject_harbor/subject:harbor # Harbor에서 사용할 이미지 경로
        ports:
        - containerPort: 80


#로드 밸런서 작성하기
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
